# ReflectIA

./: .gitignore  CLAUDE.md  README.md  ai_providers.py  compute_metrics.py  config.py  create_divergence_figure.py  create_feedback_bar.py  create_quality_heatmap.py  create_question_bar.py  create_topic_hori_bar.py  env  export_dialogues.py  extract_generic.py  gradio_callbacks.py  history_manager.py  image_utils.py  main.py  pyproject.toml  reduce_img.py  test_markdown.py
data/123/: messages.json  state.json
data/12345/: messages.json  state.json
figures/: violin_avg_tokens_student.py  violin_num_turns_pretty.py
messages/: .gitignore
metrics/: __init__.py  config.py  core_metrics.py  dialogue_batch_processor.py  helpers.py  lexicon_ca.py  refactor_ifsz.py  registry.py  stats_utils.py
prompts/: prompt_conversation.txt  prompt_conversation_v2.txt  prompt_conversation_v3.txt  prompt_conversation_v4.txt  prompt_conversation_v5.1.txt  prompt_conversation_v5.2.txt  prompt_conversation_v5.3.txt  prompt_conversation_v5.4.txt  prompt_conversation_v5.txt  prompt_conversation_v6.txt  prompt_conversation_v7.txt  prompt_conversation_v8.txt  prompt_conversation_v9.txt  prompt_design.txt  prompt_magazine.txt  prompt_magazine_full.txt  prompt_magazine_full_v2.txt  prompt_magazine_full_v3.txt  prompt_magazine_full_v4.txt  prompt_magazine_full_v5.txt  prompt_social.txt  prompt_social_full_v1.txt  prompt_social_full_v2.txt  prompt_social_full_v3.txt  prompt_social_full_v4.txt  prompt_social_full_v5.txt  prompt_social_full_v6.txt  prompt_social_full_v7.txt
static/: styles.css
(+4 files in other folders)
