[project]
name = "roso-ux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "gradio>=5.39.0",
    "pyparsing==3.2.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
