[project]
name = "roso-ux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "gradio>=5.39.0",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pip>=25.3",
    "pyparsing==3.2.2",
    "pytesseract>=0.3.13",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.7",
    "statsmodels>=0.14.5",
    "streamlit>=1.50.0",
    "textblob>=0.19.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
